# fortran_magic

./: .gitattributes  .gitignore  CHANGES.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  documentation.ipynb  example_notebook.ipynb  fortranmagic.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: conda-app.yml  micromamba.yml  release.yml
test/: base-environment.yml  conftest.py  environment.yml  fib1.f  install_and_test.sh  solve.f90  test_010_init_cfg_and_cache.py  test__rm_rf_ipython_fortran.py  test_documentation_ipynb.py  test_f2py.py  test_fortran_config.py  test_fortranmagic.py  test_oserror.py  test_readme_md.py  test_readme_rst.py  test_setup.py  test_zload_ext.py
tests/: base-environment.yml  test_documentation_ipynb.py  test_f2py.py  test_fortran_config.py  test_oserror.py  test_setup.py  test_zload_ext.py
