[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "fortran-magic"
dynamic = ["version"]
description = "An extension for IPython that help to use Fortran in your interactive session."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { file = "LICENSE" }
authors = [
  { name = "Martin Gaitan", email = "gaitan@gmail.com" },
]
keywords = ["ipython", "notebook", "fortran", "f2py", "science"]
dependencies = ["ipython", "numpy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: IPython",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Fortran",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/mgaitan/fortran_magic"
Documentation = "http://nbviewer.ipython.org/urls/raw.github.com/mgaitan/fortran_magic/master/documentation.ipynb"
Changelog = "https://github.com/mgaitan/fortran_magic/blob/master/CHANGES.md"

[dependency-groups]
dev = [
  "jupyter-client",
  "ipykernel",
  "meson",
  "nbconvert",
  "nbformat",
  "ninja",
  "pickleshare",
  "pytest",
  "ruff",
  "tomli; python_version < '3.11'",
  "cmake",
  "coverage",
]

[tool.hatch.version]
path = "fortranmagic.py"

[tool.hatch.build]
include = [
  "fortranmagic.py",
  "README.md",
  "CHANGES.md",
  "LICENSE",
  "documentation.ipynb",
  "test/**",
]

[tool.hatch.build.targets.wheel]
include = ["fortranmagic.py"]

[tool.pytest.ini_options]
addopts = "-m \"not paranoid\""
markers = [
  "fast: test only cells with tags 'fast'",
  "medium: test untagged cells and with tags 'fast'",
  "slow: don't test cells with tags 'slow'",
  "paranoid: logically redundant tests, use `pytest -m ''`",
]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",      # pycodestyle (E, W) https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "F",      # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",      # isort
    "C90",    # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "A",      # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "ANN",    # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF",    # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "T10",    # remove pdbs
    "ISC",    # https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
    "SIM",    # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "ASYNC",  # https://docs.astral.sh/ruff/rules/#flake8-async-async
    "ERA",    # https://docs.astral.sh/ruff/rules/#eradicate-era
    "TRY",    # https://docs.astral.sh/ruff/rules/#tryceratops-try
    "BLE",    # https://docs.astral.sh/ruff/rules/#flake8-blind-except-ble
    "B",      # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "EXE",    # https://docs.astral.sh/ruff/rules/#flake8-executable-exe
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "C4",     # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "N",      # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PIE",    # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
    "PERF",   # https://docs.astral.sh/ruff/rules/#perflint-perf
    "PL",     # https://docs.astral.sh/ruff/rules/#pylint-pl
    "FURB",   # https://docs.astral.sh/ruff/rules/#refurb-furb
    "RET",    # https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "TID252", # https://docs.astral.sh/ruff/rules/relative-imports/
]
[tool.ruff.lint.per-file-ignores]
"documentation.ipynb" = ["F821", "PLR2004"]
"fortranmagic.py" = ["ANN", "C901", "PLR0912", "PLR0915", "TRY003"]
"tests/*.py" = ["ANN", "C901", "PLR0912", "PLR0915", "PLR2004", "PLC0415", "PLW0603"]
